Fix foundations 02-header. Misunderstood gaps

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -25,7 +25,7 @@ ul {
   padding: 0;
 
   display: flex;
-  row-gap: 10px;
+  column-gap: 10px;
 }
 
 a {
